[gd_scene load_steps=5 format=3 uid="uid://2hq2y2jefpui"]

[ext_resource type="Script" path="res://script/health_potion.gd" id="1_d5g2d"]
[ext_resource type="Texture2D" uid="uid://mgnue6y2recn" path="res://assets/Dungeon Tileset Assets/Dungeon_Tileset.png" id="1_fljqr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_swlxu"]
atlas = ExtResource("1_fljqr")
region = Rect2(143.727, 128.453, 16.2735, 16.8532)

[sub_resource type="CircleShape2D" id="CircleShape2D_i38r5"]
radius = 7.07107

[node name="health_potion" type="Node2D"]
script = ExtResource("1_d5g2d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_swlxu")

[node name="potion_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="potion_hitbox"]
shape = SubResource("CircleShape2D_i38r5")

[node name="delete_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="potion_hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="potion_hitbox" to="." method="_on_potion_hitbox_body_entered"]
[connection signal="timeout" from="delete_timer" to="." method="_on_delete_timer_timeout"]
